2010-03-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `sys_siglist' check to configure.in.

	* configure.in (sys_siglist): Add to `AC_CHECK_FUNCS_ONCE'.

2010-03-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move "siginfo_t .si_errno" check to configure.in.

	* configure.in: Add check for "siginfo_t .si_errno".
	(HAVE_SI_ERRNO): New AC_DEFINE.

2010-03-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move "unlink on unwritable files" check to configure.in.

	* configure.in: Add check for "unlink on unwritable files".
	(BAD_UNLINK): New AC_DEFINE_UNQUOTED.

2010-03-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move "fopen w+ truncates" check to configure.in.

	* configure.in: Add check for "fopen w+ truncates".
	(BAD_FOPEN_WPLUS): New AC_DEFINE_UNQUOTED.

2010-02-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move "signal zaps handler" check to configure.in.

	* configure.in: Add check for signal zapping handlers,
	but only do this if we have <signal.h> and not `sigaction'.
	(SIG_ZAPS_HANDLER): New AC_DEFINE_UNQUOTED.

2010-02-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move "fflush input" check to configure.in.

	* configure.in: Add check for fflush on input stream.
	(CAN_FFLUSH_IN): New AC_DEFINE_UNQUOTED.

2010-02-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move "`write' after `creat (F, 0)'" check to configure.in.

	* configure.in: Add check for write(2) after
	creat(2) with mode 0 failing in the "wrong" way.
	(RCS_CBOOL): New AC_DEFUN.
	(BAD_CREAT0): New AC_DEFINE_UNQUOTED.

2010-02-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `psiginfo' check to configure.in.

	* configure.in (psiginfo): Add to `AC_CHECK_FUNCS_ONCE'.

2010-02-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `sigblock' check to configure.in.

	* configure.in (sigblock): Add to `AC_CHECK_FUNCS_ONCE'.

2010-02-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `sigaction' check to configure.in.
