@@ -1,3 +1,11 @@
+2010-03-02  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[build] Move "bad rename" checks to configure.in.
+
+	* rcsedit.c: Do s/bad_a_rename/BAD_A_RENAME/g;
+	do s/bad_b_rename/BAD_B_RENAME/g.
+	* conf.sh: Remove "bad rename" checks.
+
 2010-03-01  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[build] Move `sys_siglist' check to configure.in.
